<resources>
    <string name="app_name">Байтбарак</string>

    <!-- Strings related to toolbar titles -->
    <string name="title_home">Хона</string>
    <string name="title_my">Аз ман</string>
    <string name="title_me">Ман</string>
    <string name="title_notifications">Хотиррасонак</string>
    <string name="title_create_battle">Байтбараки нав</string>
    <string name="title_create_couplet">Байти нав</string>
    <string name="title_edit_couplet">Ислохи байт</string>
    <string name="title_friend_list">Дустон</string>
    <string name="title_invite_friends">Фарёд кунед</string>


    <!-- Strings related to EditText text -->


    <!-- Strings related to EditText hint -->
    <string name="hint_author">Муаллиф</string>
    <string name="hint_battle_name">Номи байтбарак</string>
    <string name="hint_battle_description">Маълумоти дираг, чун коидаву конунхо ва дигар дархостхо</string>
    <string name="hint_couplet_line_1">Мисраи аввал</string>
    <string name="hint_couplet_line_2">Мисраи дуввум</string>
    <string name="hint_search_all">Кофтани байтбарак ё шахс</string>


    <!-- Strings related to Button text -->
    <string name="button_submit">Пахш</string>
    <string name="button_continue">Ба пеш</string>
    <string name="button_add_friend">Дархости дусти</string>
    <string name="button_edit">Ивазкунии маълумот</string>
    <string name="button_message">Паёмак</string>
    <string name="button_logout">Баромад</string>
    <string name="button_friend_request_sent">Дархост шуд</string>
    <string name="button_friend_request_pending">Кабули дусти</string>
    <string name="button_add_friends">Дохил кунед</string>
    <string name="button_invite_friends">Фарёд кунед</string>


    <!-- Strings related to Menu text -->
    <string name="menu_couplet_edit">Ислохи байт</string>
    <string name="menu_couplet_report">Репорт</string>


    <!-- Strings related to SnackBar text -->
    <string name="no_connection">Ба интернет пайваст нестед!</string>
    <string name="sign_in_cancelled">Sign in is cancelled</string>
    <string name="unknown_error">Unknown error occurred</string>
    <string name="not_your_turn">Навбати шумо нест. Лутфан интизор шавед</string>
    <string name="already_sent">Дархости дусти аллакай равон карда шудааст.</string>
    <string name="coming_soon">Coming soon</string>
    <string name="no_author">Шумо метавонед танхо аз Шоирони тастикшуда байтгузори кунед.</string>
    <string name="incorrect_lines">Мисрахои шумо нодурустанд.</string>

    <!-- Strings related to SnackBar action -->
    <string name="action_invite">Фарёд кардан</string>
    <string name="action_request_author">Дохили шоири нав</string>

    <!-- Strings related to Empty list  -->
    <string name="empty_friends">Дустон мавчуд надоранд</string>
    <string name="empty_invite">Барои фарёд дустон ёфт нашуд. Хамаи дустон дар ин байтбараканд.</string>
    <string name="empty_notifications">Хотиррасонакхо вучуд надорад.</string>
    <string name="empty_my_battles">Шумо ба ягон байтбарак дохил нестед. Метавонед аз Хона ба байтбараке дохил шавад ваё байбараки худро кушоед.</string>

    <!-- Other strings -->
    <string name="section_privacy">Тарзи байтбарак</string>
    <string name="privacy_public">Кушод</string>
    <string name="privacy_public_desc">Хама метавонад байтбаракро пайдо кунад ва ба он дохил шавад.</string>
    <string name="privacy_private">Пушида</string>
    <string name="privacy_private_desc">Хама метавонад байтбаракро пайдо кунад ва метавонад аз рохбарони байтбарак ичозат пурсад барои дохилшави.</string>
    <string name="privacy_secret">Махфи</string>
    <string name="privacy_secret_desc">Танхо бозингарони дохили метавонанд пайдо кунанд.</string>
    <string name="section_basics">Маълумот оиди байтбарак</string>
    <string name="section_members">Бозингарон</string>
    <string name="choose_friends">Дохили дустон</string>
    <string name="choose_friends_desc">Дустони худро ба ин байтбарак дохил кунед.</string>
    <string name="notification_friend_request">"%s ба шумо дархости дусти равона кард"</string>
    <string name="notification_accpet_friend_request">%s дархости дустии шуморо кабул кард</string>
    <string name="notification_battle_join">%s шуморо ба байтбарак дохил кард</string>
    <string name="notification_battle_invitation">%s шуморо ба Байтбарак фарёд кард</string>
    <string name="author_couplet_count">Байт дар барнома</string>
    <string name="couplet_count_format">%d байт</string>
    <string name="section_biography">Зиндагиномаи Шоир</string>
    <string name="number_of_friends_added">%d дуст дохил карда шуд</string>
    <string name="battle_couplet_count_format">Алъон %d байт</string>
    <string name="section_authors">Шоирон</string>
    <string name="section_todays_couplet">Байти имруза</string>
    <string name="section_top_users">Пешсафони барнома</string>
    <string name="action_info">Маълумот</string>
    <string name="friend_count_format">%d дустон пайрави доранд</string>
    <string name="invite_friends">Дустонро фарёд кунед</string>
    <string name="new_couplet">Байти нав</string>
    <string name="action_search">Кофтукоб</string>
    <string name="action_edit">Ивазкуни</string>
    <string name="button_cancel">Cancel</string>
    <string name="action_cancel">Cancel</string>
    <string name="search_section_battle">Байтбарак</string>
    <string name="search_section_users">Шахсон</string>
    <string name="search_section_authors">Шоирон</string>
    <string name="edit_cover">Ивази сурати ковер</string>
    <string name="section_posts">Байтхои Охирин</string>
    <string name="section_about">Маълумоти шахси</string>
    <string name="about_name">Ному насаб</string>
    <string name="about_email">Email</string>
    <string name="about_phone">Телефон</string>
    <string name="does_not_exists">Нест</string>
    <string name="empty_battles">Байт вучуд надорад. Аввалин бошед ва байти худро гузоред.</string>
    <string name="action_follow">Пайрави</string>
    <string name="section_battle_description">Маълумот ва коидахо</string>
    <string name="notification_battle_join_request">%s хохиши дохилшави ба байтбарак кардааст.</string>
    <string name="section_battle_join_requests">Хохошмандони дохилшави</string>
    <string name="notification_battle_join_confirmed">%s хохиши шумо доири дохилшави тасдик шуд.</string>
    <string name="notification_battle_join_rejected">%s хохиши шумо доири дохилшави раъд карда шуд</string>
    <string name="section_battle_rules">Коидахо оиди Байтбарак</string>
    <string name="title_community_guidelines">Коидаву Конунхо</string>
    <string name="checkbox_agree">Розигии коидаву конунхо</string>

</resources>
