<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/couplet_line_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:lines="1"
                android:hint="@string/hint_couplet_line_1"/>
            <EditText
                android:id="@+id/couplet_line_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:lines="1"
                android:hint="@string/hint_couplet_line_2"/>

            <AutoCompleteTextView
                android:id="@+id/couplet_author"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/hint_author" />


        </LinearLayout>
    </ScrollView>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:checked="true"
        android:id="@+id/checkbox_agree"
        android:layout_marginBottom="10dp"
        android:layout_above="@id/button_submit"
        android:layout_centerHorizontal="true"
        android:text="@string/checkbox_agree"/>
    <include
        layout="@layout/custom_button"
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>