<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_continue">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorWhiteDark">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorWhite"
                android:padding="15dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:text="@string/section_basics"
                    android:layout_marginBottom="10dp"/>
                <EditText
                    android:id="@+id/battle_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:lines="1"
                    android:hint="@string/hint_battle_name"/>

                <EditText
                    android:id="@+id/battle_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:lines="3"
                    android:gravity="top|start"
                    android:hint="@string/hint_battle_description"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorWhite"
                android:layout_marginTop="5dp"
                android:padding="15dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:text="@string/section_members"
                    android:layout_marginBottom="10dp"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:onClick="chooseFriends">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/members_add_iv"
                        android:src="@drawable/ic_add_circle_outline_black_24dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_toRightOf="@id/members_add_iv"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@id/members_add_iv">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorBlack"
                            android:text="@string/choose_friends"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/selected_friends"
                            android:textColor="@color/colorBlackLight"
                            android:text="@string/choose_friends_desc"/>
                    </LinearLayout>
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/colorWhite"
                android:layout_marginTop="5dp"
                android:padding="15dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:text="@string/section_privacy"
                    android:layout_marginBottom="10dp"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="5dp">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/privacy_public_iv"
                        android:src="@drawable/ic_public_black_24dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_toRightOf="@id/privacy_public_iv"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_toLeftOf="@id/privacy_public_rb"
                        android:layout_toEndOf="@id/privacy_public_iv"
                        android:layout_toStartOf="@id/privacy_public_rb">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorBlack"
                            android:text="@string/privacy_public"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorBlackLight"
                            android:text="@string/privacy_public_desc"/>
                    </LinearLayout>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:id="@+id/privacy_public_rb"
                        android:checked="true"
                        android:onClick="onPrivacyChanged"
                        android:layout_alignParentRight="true" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="5dp">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/privacy_private_iv"
                        android:src="@drawable/ic_lock_open_black_24dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_toRightOf="@id/privacy_private_iv"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_toLeftOf="@id/privacy_private_rb"
                        android:layout_toEndOf="@id/privacy_private_iv"
                        android:layout_toStartOf="@id/privacy_private_rb">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorBlack"
                            android:text="@string/privacy_private"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorBlackLight"
                            android:text="@string/privacy_private_desc"/>
                    </LinearLayout>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:id="@+id/privacy_private_rb"
                        android:onClick="onPrivacyChanged"
                        android:layout_alignParentRight="true" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="5dp">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/privacy_secret_iv"
                        android:src="@drawable/ic_lock_open_black_24dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_toRightOf="@id/privacy_secret_iv"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_toLeftOf="@id/privacy_secret_rb"
                        android:layout_toEndOf="@id/privacy_secret_iv"
                        android:layout_toStartOf="@id/privacy_secret_rb">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorBlack"
                            android:text="@string/privacy_secret"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorBlackLight"
                            android:text="@string/privacy_secret_desc"/>
                    </LinearLayout>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:id="@+id/privacy_secret_rb"
                        android:onClick="onPrivacyChanged"
                        android:layout_alignParentRight="true" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <include
        layout="@layout/custom_button"
        android:layout_margin="15dp"
        android:id="@+id/button_continue"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>