<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="200dp">
                <androidx.viewpager.widget.ViewPager
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/battle_featured_vp">
                </androidx.viewpager.widget.ViewPager>
                <com.google.android.material.tabs.TabLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:id="@+id/battle_featured_tl"
                    app:tabGravity="center"
                    app:tabIndicatorHeight="0dp"
                    app:tabBackground="@drawable/tab_selector">
                </com.google.android.material.tabs.TabLayout>
            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorWhite"
                android:layout_marginTop="5dp"
                android:padding="15dp">
                <TextView
                    android:text="@string/section_authors"
                    style="@style/HomeSection"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/authors_rv">
                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorWhite"
                android:layout_marginTop="5dp"
                android:padding="15dp">
                <TextView
                    style="@style/HomeSection"
                    android:text="@string/section_todays_couplet"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <include
                        layout="@layout/couplet_text"
                        android:id="@+id/couplet_line_1"/>
                    <include
                        layout="@layout/couplet_text"
                        android:id="@+id/couplet_line_2"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="viewEnd"
                        android:layout_marginTop="5dp"
                        android:gravity="end"
                        android:textSize="16sp"
                        android:id="@+id/couplet_author"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorWhite"
                android:layout_marginTop="5dp"
                android:padding="15dp">
                <TextView
                    style="@style/HomeSection"
                    android:text="@string/section_top_users"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/top_users_rv">
                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>